# boring-neighbor

./: README.md
FrontEnd/: package-lock.json
backend/: main.py  pyproject.toml
backend/src/configs/: __init__.py  env.py
backend/src/helpers/: __init__.py  auth.py  enums.py  errors.py  logger.py
backend/src/repositories/: repository.py
backend/src/repositories/models/: __init__.py  base.py  construction.py  user.py
backend/src/repositories/repositories/: repository.py
backend/src/repositories/repositories/construction_approval_repo/: __init__.py  construction_approval_repo.py  construction_approval_repo_interface.py  construction_approval_repo_mock.py
backend/src/repositories/repositories/construction_phase_repo/: __init__.py  construction_phase_repo.py  construction_phase_repo_interface.py  construction_phase_repo_mock.py
backend/src/repositories/repositories/construction_progress_repo/: __init__.py  construction_progress_repo.py  construction_progress_repo_interface.py  construction_progress_repo_mock.py
backend/src/repositories/repositories/construction_repo/: __init__.py  construction_repo.py  construction_repo_interface.py  construction_repo_mock.py
backend/src/repositories/repositories/user_repo/: __init__.py  user_repo.py  user_repo_interface.py  user_repo_mock.py
backend/src/router/: __init__.py  main.py
backend/src/router/auth/: controller.py  service.py  view.py
backend/src/router/constructions/: __init__.py  controller.py  service.py  view.py
frontend-mobile/: App.tsx  app.json  package-lock.json  package.json
iac/: app.py  (+1 more)
(+27 files in other folders)
