[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.18",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langgraph>=0.6.6",
    "pydantic>=2.11.7",
    "redis[hiredis]>=6.4.0",
    "redisvl>=0.8.2",
    "uvicorn>=0.35.0",
]
